Added multi language support

--- a/react/brand-landing-page/src/locale/en.json
+++ b/react/brand-landing-page/src/locale/en.json
@@ -7,10 +7,12 @@
   "sections_2_display_key": "services",
   "sections_3_display_name": "Contact US",
   "sections_3_display_key": "contact_us",
-  "sections_4_display_name": "Payment",
-  "sections_4_display_key": "payment",
+  "sections_4_display_name": "Pricing",
+  "sections_4_display_key": "Pricing",
   "sections_5_display_name": "About Us",
   "sections_5_display_key": "about_us",
+  "sections_6_display_name": "Testimonials",
+  "sections_6_display_key": "testimonials",
   "home_title": "Welcome to Your Gateway to Online Services in Iran!",
   "home_description": "Are you facing challenges accessing essential online services in Iran where location restrictions apply? Look no further! Our Virtual Private Server (VPS) solution is designed to provide you with seamless access to vital online services in Iran from anywhere in the world, all for just 9.99 for one month of service.",
   "home_description_2": "Don’t let geographical restrictions hold you back. Sign up today and unlock the potential of accessing essential online services in Iran with ease and security!",
@@ -34,7 +36,32 @@
   "contact_us_lbl_contact_number": "Contact Number",
   "contact_us_lbl_email": "Email",
   "contact_us_btn_submit": "Submit",
-  "payment_title": "Payment Section",
+  "payment_title": "Pricing",
   "about_us_title": "About Us Section",
-  "rights": "All Rights reserved by @'IRanInOut'"
+  "rights": "All Rights reserved by @'IRanInOut'",
+  "about_us": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.",
+  "contact_us_title": "Contact Us",
+  "contact_us_first_name_error": "First name is required",
+  "contact_us_last_name_error": "Last name is required",
+  "contact_us_contact_number_error": "Contact number must be 10 digits",
+  "contact_us_email_error": "Please enter a valid email address",
+  "contact_form_submited": "Form submitted successfully!",
+  "page_not_found": "This is Page not found page",
+  "pricing_service_one": "best service",
+  "pricing_service_two": "quick availability",
+  "pricing_service_three": "high customer support",
+  "pricing_service_four": "valid aquisition",
+  "pricing_service_five": "easy refund",
+  "pricing_price_value": "Price: 100 R",
+  "testimonials": "Testimonials",
+  "client_one_name": "Shirley Fultz",
+  "client_one_role": "Designer",
+  "client_one_description": "It's freeing to be able to catch up on customized news and not be distracted by a social media element on the same site",
+  "client_two_name": "Daniel Keystone",
+  "client_two_role": "Designer",
+  "client_two_description": "The simple and intuitive design makes it easy for me use. I highly recommend Fetch to my peers.",
+  "client_three_name": "Theo Sorel",
+  "client_three_role": "Designer",
+  "client_three_description": "I enjoy catching up with Fetch on my laptop, or on my phone when I'm on the go!",
+  "nav_bar_language": "Language:"
 }
