--- a/react/brand-landing-page/src/locale/fr.json
+++ b/react/brand-landing-page/src/locale/fr.json
@@ -1,5 +1,67 @@
 {
-    "welcome": "Bienvenue",
-    "description": "Ceci est un exemple de support multilingue dans React."
-  }
-  
+  "welcome": "Bienvenue",
+  "description": "Ceci est un exemple de support multilingue dans React.",
+  "sections_1_display_name": "Accueil",
+  "sections_1_display_key": "accueil",
+  "sections_2_display_name": "Services",
+  "sections_2_display_key": "services",
+  "sections_3_display_name": "Contactez-nous",
+  "sections_3_display_key": "contactez_nous",
+  "sections_4_display_name": "Paiement",
+  "sections_4_display_key": "paiement",
+  "sections_5_display_name": "À Propos",
+  "sections_5_display_key": "a_propos",
+  "sections_6_display_name": "Témoignages",
+  "sections_6_display_key": "temoignages",
+  "home_title": "Bienvenue sur Votre Portail des Services en Ligne en Iran !",
+  "home_description": "Rencontrez-vous des difficultés pour accéder aux services en ligne essentiels en Iran où des restrictions de localisation s'appliquent ? Ne cherchez plus ! Notre solution de Serveur Privé Virtuel (VPS) est conçue pour vous fournir un accès fluide aux services en ligne vitaux en Iran depuis n'importe où dans le monde, pour seulement 9,99 pour un mois de service.",
+  "home_description_2": "Ne laissez pas les restrictions géographiques vous freiner. Inscrivez-vous dès aujourd'hui et débloquez le potentiel d'accès aux services en ligne essentiels en Iran en toute simplicité et sécurité !",
+  "services_title": "Pourquoi Choisir Notre Service VPS ?",
+  "service_1_title": "Accédez aux Services Locaux",
+  "service_1_description": "Notre VPS vous permet de vous connecter à des services essentiels en Iran nécessitant une présence locale, y compris : - Banque en ligne - Services de Notaire - Transactions Immobilières - Fournisseurs d'Accès Internet - Services Téléphoniques - et plus encore !",
+  "service_2_title": "Connexion Sécurisée",
+  "service_2_description": "Vos données sont notre priorité. Nous utilisons des pare-feux avancés et un cryptage de bout en bout pour garantir que toutes les informations (textes, fichiers, etc.) échangées entre vous et les services en ligne restent sécurisées.",
+  "service_3_title": "Configuration Facile",
+  "service_3_description": "Commencer est simple ! Remplissez simplement le formulaire ci-dessous, et dans les 24 heures suivant le paiement réussi, vous recevrez votre nom d'utilisateur unique, mot de passe, et un lien pour accéder à votre VPS.",
+  "service_1_youtube_title": "Explication du VPN (Réseau Privé Virtuel)",
+  "service_1_youtube_url": "https://www.youtube.com/watch?v=R-JUOpCgTZc",
+  "service_2_youtube_title": "Qu'est-ce que LAN | Qu'est-ce que VLAN (LAN Virtuel) | Différence entre LAN et VLAN | LAN & VLAN Expliqués",
+  "service_2_youtube_url": "https://www.youtube.com/watch?v=ub-tODeuu7Y",
+  "service_3_youtube_title": "Comment Fonctionne le Certificat SSL ? - HTTPS Expliqué",
+  "service_3_youtube_url": "https://www.youtube.com/watch?v=0yw-z6f7Mb4",
+  "service_4_youtube_title": "Qu'est-ce que SSL ? | Qu'est-ce que le Certificat SSL ? | Architecture et Protocoles SSL | Couche de Socket Sécurisée",
+  "service_4_youtube_url": "https://www.youtube.com/watch?v=-dQyUqoK16w",
+  "contact_us_lbl_first_name": "Prénom",
+  "contact_us_lbl_last_name": "Nom de famille",
+  "contact_us_lbl_contact_number": "Numéro de contact",
+  "contact_us_lbl_email": "E-mail",
+  "contact_us_btn_submit": "Soumettre",
+  "payment_title": "Tarification",
+  "about_us_title": "Section À Propos",
+  "rights": "Tous droits réservés par @'IRanInOut'",
+  "about_us": "Lorem Ipsum est simplement du faux texte de l'industrie de l'impression et de la composition. Lorem Ipsum est le texte factice standard de l'industrie depuis les années 1500, lorsqu'un imprimeur inconnu a pris une galerie de caractères et l'a brouillée pour en faire un livre spécimen. Il a survécu non seulement à cinq siècles, mais aussi au passage à la composition électronique, restant essentiellement inchangé. Il a été popularisé dans les années 1960 avec la sortie de feuilles Letraset contenant des passages de Lorem Ipsum, et plus récemment avec des logiciels de publication assistée par ordinateur comme Aldus PageMaker incluant des versions de Lorem Ipsum.",
+  "contact_us_title": "Contactez-nous",
+  "contact_us_first_name_error": "Le prénom est obligatoire",
+  "contact_us_last_name_error": "Le nom de famille est obligatoire",
+  "contact_us_contact_number_error": "Le numéro de contact doit être composé de 10 chiffres",
+  "contact_us_email_error": "Veuillez entrer une adresse e-mail valide",
+  "contact_form_submited": "Formulaire soumis avec succès !",
+  "page_not_found": "Ceci est la page non trouvée",
+  "pricing_service_one": "meilleur service",
+  "pricing_service_two": "disponibilité rapide",
+  "pricing_service_three": "support client élevé",
+  "pricing_service_four": "acquisition valide",
+  "pricing_service_five": "remboursement facile",
+  "pricing_price_value": "Prix : 100 R",
+  "testimonials": "Témoignages",
+  "client_one_name": "Shirley Fultz",
+  "client_one_role": "Designer",
+  "client_one_description": "C'est libérateur de pouvoir suivre les nouvelles personnalisées sans être distrait par un élément de réseau social sur le même site.",
+  "client_two_name": "Daniel Keystone",
+  "client_two_role": "Designer",
+  "client_two_description": "La conception simple et intuitive me permet de l'utiliser facilement. Je recommande vivement Fetch à mes collègues.",
+  "client_three_name": "Theo Sorel",
+  "client_three_role": "Designer",
+  "client_three_description": "J'aime suivre Fetch sur mon ordinateur portable, ou sur mon téléphone quand je suis en déplacement !",
+  "nav_bar_language": "Langue:"
+}
