--- a/react/brand-landing-page/src/locale/gb.json
+++ b/react/brand-landing-page/src/locale/gb.json
@@ -38,7 +38,7 @@
     "contact_us_btn_submit": "Absenden",
     "payment_title": "Preisgestaltung",
     "about_us_title": "Über uns Abschnitt",
-    "rights": "Alle Rechte vorbehalten von @'IRanInOut'",
+    "rights": "Alle Rechte vorbehalten von @'mywebsite'",
     "about_us": "Lorem Ipsum ist einfach ein Blindtext der Druck- und Satzindustrie. Lorem Ipsum ist seit den 1500er Jahren der Standard-Blindtext der Branche, als ein unbekannter Drucker eine Druckfahne nahm und sie durcheinander brachte, um ein Musterbuch zu erstellen. Er hat nicht nur fünf Jahrhunderte überlebt, sondern auch den Sprung in die elektronische Satztechnik überstanden, im Wesentlichen unverändert. In den 1960er Jahren wurde er mit der Veröffentlichung von Letraset-Bögen mit Lorem Ipsum-Passagen populär, und in jüngerer Zeit mit Desktop-Publishing-Software wie Aldus PageMaker, die Versionen von Lorem Ipsum enthält.",
     "contact_us_title": "Kontaktieren Sie uns",
     "contact_us_first_name_error": "Vorname ist erforderlich",
