--- a/react/brand-landing-page/src/locale/it.json
+++ b/react/brand-landing-page/src/locale/it.json
@@ -38,7 +38,7 @@
     "contact_us_btn_submit": "Invia",
     "payment_title": "Prezzi",
     "about_us_title": "Sezione Chi Siamo",
-    "rights": "Tutti i diritti riservati da @'IRanInOut'",
+    "rights": "Tutti i diritti riservati da @'mywebsite'",
     "about_us": "Lorem Ipsum è un testo segnaposto utilizzato nel settore della tipografia e della stampa. Lorem Ipsum è stato il testo fittizio standard dell'industria sin dal 1500, quando un tipografo sconosciuto prese una cassetta di caratteri e li mescolò per fare un libro di esempi di caratteri. Non solo è sopravvissuto per cinque secoli, ma è anche passato all'editoria elettronica, rimanendo sostanzialmente invariato. Fu reso popolare negli anni '60 con la pubblicazione di fogli Letraset contenenti passaggi di Lorem Ipsum, e più recentemente con software di impaginazione come Aldus PageMaker, che includeva versioni di Lorem Ipsum.",
     "contact_us_title": "Contattaci",
     "contact_us_first_name_error": "Il nome è obbligatorio",
