--- a/react/brand-landing-page/src/locale/fr.json
+++ b/react/brand-landing-page/src/locale/fr.json
@@ -38,7 +38,7 @@
   "contact_us_btn_submit": "Soumettre",
   "payment_title": "Tarification",
   "about_us_title": "Section À Propos",
-  "rights": "Tous droits réservés par @'IRanInOut'",
+  "rights": "Tous droits réservés par @'mywebsite'",
   "about_us": "Lorem Ipsum est simplement du faux texte de l'industrie de l'impression et de la composition. Lorem Ipsum est le texte factice standard de l'industrie depuis les années 1500, lorsqu'un imprimeur inconnu a pris une galerie de caractères et l'a brouillée pour en faire un livre spécimen. Il a survécu non seulement à cinq siècles, mais aussi au passage à la composition électronique, restant essentiellement inchangé. Il a été popularisé dans les années 1960 avec la sortie de feuilles Letraset contenant des passages de Lorem Ipsum, et plus récemment avec des logiciels de publication assistée par ordinateur comme Aldus PageMaker incluant des versions de Lorem Ipsum.",
   "contact_us_title": "Contactez-nous",
   "contact_us_first_name_error": "Le prénom est obligatoire",
