--- a/react/brand-landing-page/src/locale/sp.json
+++ b/react/brand-landing-page/src/locale/sp.json
@@ -38,7 +38,7 @@
     "contact_us_btn_submit": "Enviar",
     "payment_title": "Precios",
     "about_us_title": "Sección Sobre Nosotros",
-    "rights": "Todos los derechos reservados por @'IRanInOut'",
+    "rights": "Todos los derechos reservados por @'mywebsite'",
     "about_us": "Lorem Ipsum es simplemente texto ficticio de la industria de la impresión y composición. Lorem Ipsum ha sido el texto ficticio estándar de la industria desde el 1500, cuando un impresor desconocido tomó una galera de tipos y la mezcló para hacer un libro de muestras. Ha sobrevivido no solo cinco siglos, sino también el salto a la composición electrónica, permaneciendo esencialmente sin cambios. Se popularizó en la década de 1960 con la publicación de hojas Letraset con pasajes de Lorem Ipsum, y más recientemente con software de autoedición como Aldus PageMaker, que incluía versiones de Lorem Ipsum.",
     "contact_us_title": "Contáctanos",
     "contact_us_first_name_error": "El nombre es obligatorio",
